<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ui.AddActivity">

    <EditText
        android:id="@+id/editTextTaskName_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#2E7D32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate_udpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/date_month_year"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#2E7D32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName_update"
        android:autofillHints="" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_update" />

    <ImageButton
        android:backgroundTint="@color/purple_200"
        android:id="@+id/imageButtonCalendar_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate_udpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextDate_udpdate"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName_update"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_calendar_month"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        android:contentDescription="@string/calendar" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green"
        android:text="@string/update"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch1_update"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonCalendar_update" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/switch1_update"
        app:layout_constraintTop_toBottomOf="@+id/button_update" />

</androidx.constraintlayout.widget.ConstraintLayout>