<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue2"
    tools:context=".ui.AddActivity">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="99dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_month_year"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <ImageButton
        android:id="@+id/imageButtonCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/calendar"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_calendar_month"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonCalendar" />
</androidx.constraintlayout.widget.ConstraintLayout>